feat: add benchmarks